[feat]: first stab at native libraries with FFI